sending to repo

--- a/package.json
+++ b/package.json
@@ -1,11 +1,37 @@
 {
-  "name": "indecision-app",
+  "name": "expensify-app",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Wagner de Andrade Perin",
   "license": "MIT",
+  "scripts": {
+    "serve": "live-server public/",
+    "build": "webpack",
+    "dev-server": "webpack-dev-server --mode development"
+  },
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@reduxjs/toolkit": "^1.8.4",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "live-server": "^1.2.2",
+    "node-sass": "^7.0.1",
+    "normalize.css": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
+    "react-router-dom": "^6.3.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "validator": "^13.7.0",
+    "webpack": "^5.74.0",
+    "webpack-dev-server": "^4.10.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "webpack-cli": "^4.10.0"
   }
 }
